<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:orientation="vertical"
        android:background="@drawable/corners_5dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:paddingTop="13dp"
            android:gravity="center"
            android:text="@string/confirm_add_to_shopcar"
            android:textSize="@dimen/sp_17"
            android:textColor="#222222"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/split_line_color"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_8c8c8c"
                android:gravity="center"
                android:id="@+id/add_to_shopcar_cancel"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/split_line_color"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/color_ff6243"
                android:gravity="center"
                android:id="@+id/add_to_shopcar_confirm"
                />


        </LinearLayout>
    </LinearLayout>
</layout>