<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/bg_color_f4f4f4"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_left_15dp"
            android:text="@string/filter"
            android:textColor="@color/color_7f7f7f"
            android:textSize="@dimen/sp_14"

            />


        <!--订单状态 开始-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom">

            <RelativeLayout
                android:id="@+id/order_statu_container"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                >

                <TextView
                    android:id="@+id/order_statu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_left_15dp"
                    android:text="@string/order_statu"
                    android:textColor="@color/color_7f7f7f"
                    android:textSize="@dimen/sp_14"
                    />

                <LinearLayout
                    android:id="@+id/show_order_statu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_right_10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/order_statu_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_audit"
                        android:textColor="@color/color_333333"
                        android:textSize="@dimen/sp_14"
                        />

                    <ImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:background="@mipmap/btn_xiangxia"
                        android:id="@+id/order_statu_arrow"
                        />
                </LinearLayout>
            </RelativeLayout>


            <!--隐藏的区域  开始-->
            <LinearLayout
                android:id="@+id/filter_order_statu_hide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/order_statu_container"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_left_10dp"
                android:paddingRight="@dimen/margin_right_10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/order_all"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/order_audit"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/order_finance"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/order_output"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/order_deliver"
                    android:textColor="@color/color_333333"

                    android:textSize="@dimen/sp_14"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/order_receive"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/already_completed"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/already_delete"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />
            </LinearLayout>
            <!--隐藏的区域  结束-->

        </RelativeLayout>
        <!--订单状态 结束-->

        <!--付款状态 开始-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bottom">

            <RelativeLayout
                android:id="@+id/pay_statu_container"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_left_15dp"
                    android:text="@string/order_statu"
                    android:textColor="@color/color_7f7f7f"
                    android:textSize="@dimen/sp_14"
                    />

                <LinearLayout
                    android:id="@+id/show_pay_statu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_right_10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/pay_statu_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/section_pay"
                        android:textColor="@color/color_333333"
                        android:textSize="@dimen/sp_14"/>

                    <ImageView

                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:background="@mipmap/btn_xiangxia"
                        android:id="@+id/pay_statu_arrow"
                        />
                </LinearLayout>
            </RelativeLayout>


            <!--隐藏的区域  开始-->
            <LinearLayout
                android:id="@+id/filter_pay_statu_hide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@id/pay_statu_container"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_left_10dp"
                android:paddingRight="@dimen/margin_right_10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/all"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/stay_pay"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/section_pay"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/already_pay"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginBottom="@dimen/margin_bottom_5dp"
                    android:background="@drawable/gray_solid_radius"
                    android:gravity="center"
                    android:text="@string/already_cancel"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_14"
                    />

            </LinearLayout>
            <!--隐藏的区域  结束-->

        </RelativeLayout>
        <!--订单状态 结束-->

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:background="@drawable/border_bottom"-->
        <!--android:layout_height="45dp">-->
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/pay_statu"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginLeft="@dimen/margin_left_15dp"-->
        <!--android:textSize="@dimen/sp_14"-->
        <!--android:textColor="@color/color_7f7f7f"-->

        <!--/>-->

        <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginRight="@dimen/margin_right_10dp"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/section_pay"-->
        <!--android:textSize="@dimen/sp_14"-->
        <!--android:textColor="@color/color_333333"-->
        <!--/>-->

        <!--<ImageView-->
        <!--android:layout_width="23dp"-->
        <!--android:layout_height="23dp"-->
        <!--android:background="@mipmap/btn_xiangxia"-->

        <!--/>-->
        <!--</LinearLayout>-->
        <!--</RelativeLayout>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_left_15dp"
                android:text="@string/order_time"
                android:textColor="@color/color_7f7f7f"
                android:textSize="@dimen/sp_14"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_right_10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="62dp"
                    android:layout_height="27dp"
                    android:background="@drawable/border_radius_gray"

                    />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:background="@color/edittext_stroke_color"
                    />

                <EditText
                    android:layout_width="62dp"
                    android:layout_height="27dp"
                    android:background="@drawable/border_radius_gray"

                    />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</layout>