<layout xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <android.support.v4.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_drawer"

        >
        <!--内容区域 开始-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fitsSystemWindows="true"
                android:layout_weight="1"></FrameLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <RadioButton
                    android:id="@+id/home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textSize="@dimen/sp_12"
                    android:drawableTop="@drawable/home_selector"
                    android:textColor="@color/radio_text_color"
                    />

                <RadioButton
                    android:id="@+id/good"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/good_selector"
                    android:gravity="center"
                    android:text="@string/shop"
                    android:textColor="@color/radio_text_color"
                    android:textSize="@dimen/sp_12"
                    />

                <RadioButton
                    android:id="@+id/order"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/order_selector"
                    android:gravity="center"
                    android:text="@string/order"
                    android:textColor="@color/radio_text_color"
                    android:textSize="@dimen/sp_12"
                    />

                <RadioButton
                    android:id="@+id/shop_car"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/shopcar_selector"
                    android:gravity="center"
                    android:text="@string/shopCar"
                    android:textColor="@color/radio_text_color"
                    android:textSize="@dimen/sp_12"
                    />

                <RadioButton
                    android:id="@+id/me"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/me_selector"
                    android:gravity="center"
                    android:text="@string/me"
                    android:textColor="@color/radio_text_color"
                    android:textSize="@dimen/sp_12"
                    />

            </RadioGroup>
        </LinearLayout>
        <!--内容区域 结束-->

        <android.support.design.widget.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:fitsSystemWindows="true"
            >
        </android.support.design.widget.NavigationView>
    </android.support.v4.widget.DrawerLayout>


</layout>